--- a/app/src/main/res/layout/repository_items.xml
+++ b/app/src/main/res/layout/repository_items.xml
@@ -1,77 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/cardv"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="2dp">
+    android:layout_marginBottom="4dp"
+    android:focusable="true"
+    app:cardBackgroundColor="@android:color/holo_blue_dark"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="4dp">
 
     <RelativeLayout
-        android:layout_width="467dp"
-        android:layout_height="172dp"
-        android:layout_margin="2dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="0dp">
 
-
-        <TextView
-            android:id="@+id/repostartv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="296dp"
-            android:layout_marginTop="130dp"
-            android:text="repostartv" />
-
-        <TextView
-            android:id="@+id/repoNametv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="6dp"
-            android:text="reponametv" />
-
-        <TextView
-            android:id="@+id/repoDescriptiontv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="19dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="53dp"
-            android:text="repoDescriptiontv" />
-
-        <TextView
-            android:id="@+id/repoOnwertv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="88dp"
-            android:layout_marginBottom="21dp"
-            android:text="repoOnwertv" />
 
         <ImageView
             android:id="@+id/phototv"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             app:srcCompat="@mipmap/ic_launcher" />
 
-        <ImageView
-            android:id="@+id/imageView"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="269dp"
-            android:layout_marginBottom="19dp"
-            app:srcCompat="@drawable/ic_star_black_24dp" />
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/repoOnwertv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="repoOnwertv" />
+
+            <TextView
+                android:id="@+id/repoNametv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="reponametv" />
+
+            <TextView
+                android:id="@+id/repostartv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="repostartv" />
+
+            <TextView
+                android:id="@+id/repoDescriptiontv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="repoDescriptiontv" />
+
+
+        </LinearLayout>
+
     </RelativeLayout>
 
 
