--- a/app/src/main/res/layout/repository_items.xml
+++ b/app/src/main/res/layout/repository_items.xml
@@ -2,65 +2,92 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardv"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
     android:focusable="true"
-    app:cardBackgroundColor="@android:color/holo_blue_dark"
     app:cardCornerRadius="2dp"
     app:cardElevation="4dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="0dp">
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/phototv"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="39dp"
+            android:layout_height="42dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="136dp"
+            android:layout_marginBottom="19dp"
             app:srcCompat="@mipmap/ic_launcher" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/repoOnwertv"
+            android:layout_width="111dp"
+            android:layout_height="43dp"
+            android:layout_alignBottom="@+id/phototv"
+            android:layout_marginStart="21dp"
+            android:layout_marginBottom="-3dp"
+            android:layout_toEndOf="@+id/phototv"
+            android:gravity="center|fill|top"
+            android:text="repoOnwertv" />
+
+        <TextView
+            android:id="@+id/repoNametv"
+            android:layout_width="201dp"
+            android:layout_height="46dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="194dp"
+            android:gravity="center"
+            android:text="reponametv" />
+
+        <TextView
+            android:id="@+id/repostartv"
+            android:layout_width="117dp"
+            android:layout_height="45dp"
+            android:layout_alignTop="@+id/phototv"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="97dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="13dp"
+            android:layout_toEndOf="@+id/repoOnwertv"
+            android:gravity="left|center_vertical"
+            android:text="repostartv" />
+
+        <TextView
+            android:id="@+id/repoDescriptiontv"
             android:layout_width="wrap_content"
+            android:layout_height="92dp"
+            android:layout_above="@+id/repoOnwertv"
+            android:layout_below="@+id/repoNametv"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="-3dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="2dp"
+            android:gravity="center|left"
+            android:text="repoDescriptiontv" />
+
+        <ImageView
+            android:id="@+id/starimg"
+            android:layout_width="23dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/repoOnwertv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="repoOnwertv" />
-
-            <TextView
-                android:id="@+id/repoNametv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="reponametv" />
-
-            <TextView
-                android:id="@+id/repostartv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="repostartv" />
-
-            <TextView
-                android:id="@+id/repoDescriptiontv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="repoDescriptiontv" />
-
-
-        </LinearLayout>
+            android:layout_alignBottom="@+id/repostartv"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="250dp"
+            android:layout_marginEnd="137dp"
+            android:layout_marginBottom="9dp"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_star_black_24dp" />
 
     </RelativeLayout>
 
